--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8321,3 +8321,371 @@ input:checked + .switch-button:before {
 }.margin-top-25 {
     margin-top: 25px !important;
 }
+
+/* -------------------------------------------------------------- */
+/*  07. Dashboard
+----------------------------------------------------------------- */
+/* Full Page Adjustments */
+.full-page-container,
+.dashboard-container {
+    height: calc(100vh - 82px);
+}
+
+@media (max-width: 1099px) {
+	.full-page-container,
+	.dashboard-container {
+	    height: calc(100vh - 76px);
+	}
+}
+
+/* Dashboard Basis */
+.dashboard-container {
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+}
+
+.dashboard-sidebar {
+    flex: 0 0 280px;
+    background-color: #fff;
+    position: relative;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.1);
+    z-index: 100;
+}
+
+.dashboard-sidebar .dashboard-sidebar-inner {
+    overflow: auto;
+    height: 100%;
+}
+
+.dashboard-content-container {
+    flex: 1;
+    background-color: #fafafa;
+    padding: 0;
+    overflow: auto;
+    position: relative;
+    z-index: 99;
+}
+
+.dashboard-content-inner {
+    padding: 50px;
+    padding-bottom: 0;
+    position: relative;
+}
+
+
+/* Dashboard Header Logo Adjustent */
+@media (min-width: 1099px) {
+	#header-container.dashboard-header .container {
+		padding-right: 35px;
+		padding-left: 0;
+	}
+
+	#header-container.dashboard-header #logo {
+		width: 281px;
+		padding-left: 35px;
+	}
+}
+
+@media (max-width: 1240px) {
+	#header-container.dashboard-header #logo {
+	    width: auto;
+	}
+}
+/* Fun Facts
+------------------------------------- */
+.fun-facts-container {
+	display: flex;
+    flex-wrap: wrap;
+	width: calc(100% + 30px);
+	margin-bottom: -30px;
+}
+
+.fun-fact {
+	background-color: #fff;
+	box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+	border-radius: 4px;
+	padding: 25px;
+	margin-right: 30px;
+	margin-bottom: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+	flex: 1 1 calc(25% - 30px);
+    height: auto;
+    cursor: default;
+    transition: 0.3s;
+}
+
+/* IE 11 Fixes */
+@media screen and (-ms-high-contrast: active), screen and (-ms-high-contrast: none) {  
+	.fun-fact { flex: 1; }
+}
+/* IE 11 Fixes - End */
+
+.fun-fact-icon {
+	border-radius: 4px;
+	background-color: rgba(0,0,0,0.04);
+	flex: 0 0 100px;
+	height: 100px;
+	display: flex;
+	text-align: center;
+}
+
+.fun-fact-icon i {
+	font-size: 48px;
+    align-self: center;
+    margin: 0 auto;
+    color: #666;
+}
+
+.fun-fact-icon i.icon-material-outline-gavel {
+	transform: scale(0.91);
+}
+
+.fun-fact-text {
+	flex: 1;
+	margin-right: 20px;
+}
+
+.fun-fact span {
+	font-size: 18px;
+	color: #888;
+	line-height: 22px;
+}
+
+.fun-fact h4 {
+	font-size: 38px;
+	color: #333;
+	line-height: 38px;
+	margin-top: 5px;
+}
+.fun-fact-icon.bg-green i {
+    color: rgb(54, 189, 120);
+}
+.fun-fact-icon.bg-green {
+    background-color: rgba(54, 189, 120, 0.07);
+}
+.fun-fact-icon.bg-pink i {
+    color: rgb(184, 27, 127);
+}
+.fun-fact-icon.bg-pink {
+    background-color: rgba(184, 27, 127, 0.07);
+}
+.fun-fact-icon.bg-orange i {
+    color: rgb(239, 168, 15);
+}
+.fun-fact-icon.bg-orange {
+    background-color:rgba(239, 168, 15, 0.07);
+}
+/* ---------------------------------- */
+/* Dashboard Navigation
+------------------------------------- */
+.dashboard-nav {
+	display: block;
+	z-index: 11;
+	padding-bottom: 30px;
+}
+
+a.dashboard-responsive-nav-trigger { display: none; }
+
+.dashboard-nav ul {
+	list-style: none;
+	padding: 0;
+	margin: 25px 0 0 0;
+}
+
+.dashboard-nav ul:first-child {
+	margin: 30px 0 0 0;
+}
+
+.dashboard-nav ul:before {
+	content: attr(data-submenu-title);
+	padding: 0 35px;
+	margin-bottom: 5px;
+	display: block;
+	color: #66676b;
+	font-weight: 600;
+	font-size: 14px;
+}
+
+/* 1st Level */
+.dashboard-nav ul li {
+	display: block;
+	border-left: 3px solid transparent;
+	transition: 0.3s;
+	line-height: 25px;
+	font-size: 15px;
+}
+
+.dashboard-nav ul li a {
+	color: #707070;
+	display: block;
+	padding: 11px 32px;
+	transition: 0.3s;
+	cursor: pointer;
+	position: relative;
+}
+
+.dashboard-nav ul li a i {
+	padding-right: 8px;
+	width: 20px;
+	font-size: 20px;
+	color: #909090;
+	transition: 0.3s;
+	position: relative;
+	top: 2px;
+}
+
+
+/* Hover State */
+.dashboard-nav ul li ul li:hover a { padding-left: 4px; }
+
+
+.dashboard-nav ul li.active-submenu a i,
+.dashboard-nav ul li.active a i,
+.dashboard-nav ul li:hover a i {
+	color: #66676b;
+}
+
+.dashboard-nav ul li.active-submenu,
+.dashboard-nav ul li.active,
+.dashboard-nav ul li:hover {
+	border-color: #66676b;
+	background-color: rgba(102,103,107,0.04);
+}
+
+/*.dashboard-nav ul li:hover {
+	background-color: #f8f8f8;
+}*/
+
+.dashboard-nav ul li.active-submenu a,
+.dashboard-nav ul li:hover a,
+.dashboard-nav ul li.active a { color: #66676b; }
+
+
+/* Nav Tag */
+.dashboard-nav ul li span.nav-tag {
+	display: inline-block;
+    font-weight: 700;
+    height: 19px;
+    width: 19px;
+    line-height: 19px;
+    text-align: center;
+    color: #fff;
+    font-size: 11px;
+    background-color: #66676b;
+    border-radius: 50%;
+    position: relative;
+    margin: 0 0 0 4px;
+    top: -2px;
+}
+
+/* Dropdown Styles */
+.dashboard-nav ul li ul {
+	padding: 0;
+	margin: 0;
+	visibility: hidden;
+	max-height: 0;
+	opacity: 0;
+	line-height: 0;
+	transition: 0.3s;
+	pointer-events: none;
+}
+
+.dashboard-nav ul li.active-submenu ul {
+	visibility: visible;
+	padding: 0 0 18px 0;
+	line-height: 24px;
+	opacity: 1;
+	max-height: 200px;
+	pointer-events: all;
+}
+
+.dashboard-nav ul li ul li {
+	background-color: transparent;
+	border: none;
+	padding-left: 63px;
+	position: relative;
+	margin: 0;
+}
+
+.dashboard-nav ul li ul li a {
+	padding: 5px 0;
+}
+
+.dashboard-nav ul li ul li:hover {
+	border: none;
+	background-color: transparent;
+}
+
+/* Indicator Arrow */
+.dashboard-nav ul li a:after {
+    font-family: "Material-Icons";
+    content: '\e914';
+    opacity: 1;
+    font-size: 16px;
+    transition: 0.3s;
+    opacity: 1;
+    line-height: 17px;
+    width: 17px;
+    height: 17px;
+    background-color: #f0f0f0;
+    color: #a8a8a8;
+    display: inline-block;
+    border-radius: 3px;
+    margin-left: 7px;
+    text-indent: 0;
+    top: 1px;
+    position: absolute;
+   	right: 35px;
+    top: 15px;
+}
+
+.dashboard-nav ul li.active-submenu a:after,
+.dashboard-nav ul li.active a:after,
+.dashboard-nav ul li:hover a:after {
+    color: #66676b;
+    background: rgba(102,103,107,0.13);
+    opacity: 0.8;
+}
+
+.dashboard-nav ul li ul:before,
+.dashboard-nav ul li a:only-child:after { content: ''; display: none; }
+
+
+/* ---------------------------------- */
+/* Dashboard Elements
+------------------------------------- */
+
+/* Dashboard Headline
+------------------------------------- */
+.dashboard-headline {
+	display: block;
+	position: relative;
+	margin-bottom: 50px;
+}
+
+.dashboard-headline h3 {
+	display: block;
+	font-size: 26px;
+	color: #333;
+}
+
+.dashboard-headline span {
+	display: block;
+	font-size: 18px;
+	color: #888;
+	line-height: 30px;
+	margin-top: 5px;
+}
+
+.dashboard-headline #breadcrumbs { right: 0; }
+
+.dashboard-sidebar {
+    flex: 0 0 280px;
+    background-color: #fff;
+    position: relative;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.1);
+    z-index: 100;
+}
